--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcsh 'Boys -- Juvenile fiction'
 - !lcsh 'Adventure and adventurers -- Juvenile fiction'
 - !lcsh 'Brothers and sisters -- Juvenile fiction'
+- GITenberg
 title: 'Bob Strong''s Holidays
 
   Adrift in the Channel'
